--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ click==8.1.7
 colorama==0.4.6
 comm==0.2.2
 ConfigArgParse==1.7
-contourpy==1.2.1
+contourpy==1.3.0
 cycler==0.12.1
 dash==2.17.1
 dash-core-components==2.0.0
@@ -33,13 +33,13 @@ jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 jupyter_core==5.7.2
 jupyterlab_widgets==3.0.11
-kiwisolver==1.4.5
+kiwisolver==1.4.7
 MarkupSafe==2.1.5
-matplotlib==3.9.1.post1
+matplotlib==3.9.2
 matplotlib-inline==0.1.7
 nbformat==5.10.4
 nest-asyncio==1.6.0
-numpy==2.0.0
+numpy==2.1.1
 open3d==0.18.0
 packaging==24.1
 pandas==2.2.2
@@ -52,7 +52,10 @@ prompt_toolkit==3.0.47
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.18.0
-pyparsing==3.1.2
+pyparsing==3.1.4
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.14
+PyQt5_sip==12.15.0
 pyquaternion==0.9.9
 python-dateutil==2.9.0.post0
 pytz==2024.1
