--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ Pygments==2.18.0
 pyparsing==3.1.4
 PyQt5==5.15.11
 PyQt5-Qt5==5.15.14
+PyQt5-stubs==5.15.6.0
 PyQt5_sip==12.15.0
 pyquaternion==0.9.9
 python-dateutil==2.9.0.post0
